From ccf834c (reflection-constraints):
=====================================

In scripts/run_prisim.py,

(*) Simplify primary beam computation when specified externally for
the achromatic case

From bddd78a (reflection-constraints):
=====================================

In prisim/primary_beams.py,

(*) Update docstring of function primary_beam_generator()

In prisim/interferometry.py,

(*) Update input roi_info of member function append_settings() of
class ROI_parameters to include information on primary beam
chromaticity parameter
(*) Handle analytic computation of primary beam to adapt based on
chromaticity parameter
(*) Other minor changes

In scripts/run_prisim.py,

(*) Adjust to account for achromatic primary beam estimation in case
of analytic primary beams.

From 4348a2a (reflection-constraints):
=====================================

In prisim/interferometry.py,

(*) Update docstring of member function append_settings() of class
ROI_parameters

From bb58903 (reflection-constraints):
=====================================

In prisim/primary_beams.py,

(*) Fix wrong info on description of frequency input parameter in
docstring of function airy_disk_pattern()
(*) Update comment where zero_ind is determined in function
airy_disk_pattern()

From 8fd1df3 (reflection-constraints):
=====================================

(*) Add prisim/examples/postprocess/ to the repository
(*) Add prisim/examples/postprocess/reflection_constraints.yaml to repo
(*) Add scripts/reflection_constraints.py to repo
(*) Add .gitignore to repo

In prisim/delay_spectrum.py,

(*) Import scipy.interpolate
(*) Add function dkperp_dbll() to determine the jacobian to transform
uv-distance to kperp, along with docstring
(*) Update docstring on cosmo input parameter in function dkprll_deta()
(*) Update docstring on cosmo input parameter in __init__() member
function of class DelayPowerSpectrum
(*) Add function reflection_attenuation() to estimate constraints on